deploy/manifests/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx-ingress
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx
